# rte_misc

./: .gitlab-ci.yml  CMakeLists.txt  README.md
MessageSys/: CMakeLists.txt
MessageSys/model/: MessageSys.ovm
MessageSys/source/: Message.c  Message2Channel.c  MessageSys_ExportedFncs.c  MsgDelivery.c  MsgDelivery2CurrentMessage.c  MsgDelivery2Message.c  SendExtension2Message.c  acplt_simpleMsgCreator.c  acplt_simpleMsgParser.c  library_open.c  msgHandler.c  msgIdentificator.c
